--- a/index.html
+++ b/index.html
@@ -4,28 +4,60 @@
 	<title>GIF thing</title>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="    sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"   crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+<link rel="stylesheet" type="text/css" href="assets/css/darkly.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
 </head>
 <body>
-	<div class="buttons"></div>
-	<div class="entry_form">
-		   <form id="input-form">
-      <label for="topic-input">New Topic</label>
-      <input type="text" id="topic-input"><br>
+	<div class="container">
 
-      <!-- Button triggers new movie to be added -->
-      <input id="add-topic" type="submit" value="Add New Topic">
-    </form>
+			<div class="row">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<a class="navbar-brand" href="index.html">
+								<section class="glyphicon glyphicon-off"> </section> Reset
+							</a>
+						</div>
+					</div>
+				</nav>
+			</div>
+<div class="row center-paragraph">
+<div class="intro">
+
+	<img src="https://media3.giphy.com/media/l3q2AmjYlPXbC6nn2/giphy.gif" alt="Tom thinks he's in Blow Up!"> <br>
+	<span class="title">The Giphy Connector Display Thing</span>
+</div>
+<div class="title hidden">The Giphy Connector Display Thing</div>
+
+
+		<div class="buttons hidden"></div>
+		<div class="entry_form hidden">
+			<form id="input-form">
+				<label for="topic-input">New Topic</label>
+				<input type="text" id="topic-input">
+
+				<!-- Button triggers new movie to be added -->
+				<input id="add-topic" type="submit" value="Add New Topic">
+			</form>
+			<span id="instuctions">Load GIFs by clicking buttons, or making new buttons by topic. Enter topic in the New Topic box and click Add.<br>Click on the image to see the animation.</span>
+		</div>
+
+		<div id="results"> </div>
 	</div>
-
-	<div id="results"> </div>
-
+		</div>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
