--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>GIF thing</title>
+	<title>Giphy thing</title>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
 	<link rel="stylesheet" type="text/css" href="assets/css/slate.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
 </head>
+
 <body>
 	<div class="jumbotron">
 		<div class="container">
@@ -27,7 +26,7 @@
 			<div class="row">
 				<nav class="navbar navbar-default navbar-fixed-top">
 					<div class="container">
-						<a class="navbar-brand hidden reset" href="index.html">  <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Reset</a>
+						<a class="navbar-brand hidden reset" href="index.html"> <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Reset</a>
 						<div class="title hidden">The Giphy Connector Display Thing</div>
 					</div>
 				</nav>
@@ -53,10 +52,11 @@
 					<span id="instuctions">Load GIFs by clicking buttons, or making new buttons by topic. Enter topic in the New Topic box and click Add.<br>Click on the image to see the animation.<br> Click Reset to clear the user created buttons and reload the application.</span>
 				</div>
 
-				<div id="results"> </div>
+				<div id="results"></div>
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
+
 </html>
