--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- Button triggers new movie to be added -->
 						<input id="add-topic" type="submit" value="Add New Topic">
 					</form>
-					<span id="instuctions">Load GIFs by clicking buttons, or making new buttons by topic. Enter topic in the New Topic box and click Add.<br>Click on the image to see the animation.<br> Click Reset to clear the user created buttons and reload the application.</span>
+					<span id="instuctions">Load GIFs by clicking buttons, or making new buttons by topic. Enter topic in the New Topic box and click Add.<br>Click on the image to toggle the animation.<br> Click Reset to clear the user created buttons and reload the application.</span>
 				</div>
 
 				<div id="results"></div>
